gcc/testsuite/g++.dg/parse/elab2.C
struct A {};

struct B
{
  typedef A T;
  friend struct T; // { dg-error "" }
};
